[package]
name = "bluepill-arpeggiator"
version = "0.1.0"
authors = ["Mendelt Siebenga <msiebenga@gmail.com>"]
edition = "2018"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
cortex-m-semihosting = "0.5"
panic-semihosting = "0.6"
embedded-midi = "0.1.2"

[dependencies.hal]
package = "stm32f1xx-hal"
version = "0.10"
features = ["rt", "stm32f103"]
